--- a/hipchat.yaml
+++ b/hipchat.yaml
@@ -1,5 +1,5 @@
 ---
 :hipchat_api: 'apikey'
 :hipchat_room: 'roomname'
-:hipchat_room_color: 'red'
+:hipchat_notify_color: 'red'
 :hipchat_notify: 'false'
