--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,4 +1,6 @@
 fixtures:
+  repositories:
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
   symlinks:
     puppet_hipchat: "#{source_dir}"
 
